loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: not found: value nbPas
nbPas=0
^LoopFor:4: error: not found: value nbPas
  nbPas=nbPas+1
  ^