loopfor.LoopFor.scala.code
nbPas=0

while (!estSurBiscuit()){
  nbPas=nbPas+1
  avance()
}

porteBiscuit()
for (nbPas<-1 to 7){
  recule()
}